force-app/main/default/objects/Customer__c/fields/Break_fast__c.field-meta.xml
<CustomField>
    <fullName>Break_fast__c</fullName>
    <label>Break fast</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>designation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dosa</fullName>
            </value>
            <value>
                <fullName>idly</fullName>
            </value>
            <value>
                <fullName>upma</fullName>
            </value>
            <value>
                <fullName>wada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>