force-app/main/default/objects/Customer__c/fields/Customer_email_id__c.field-meta.xml
<CustomField>
    <fullName>Customer_email_id__c</fullName>
    <label>Customer email id</label>
    <required>true</required>
    <type>Email</type>
</CustomField>