force-app/main/default/objects/Customer__c/fields/Customer_mobile_number__c.field-meta.xml
<CustomField>
    <fullName>Customer_mobile_number__c</fullName>
    <description>This is the mobile number of the customer</description>
    <label>Customer mobile number</label>
    <type>Phone</type>
</CustomField>