force-app/main/default/objects/Customer__c/fields/designation__c.field-meta.xml
<CustomField>
    <fullName>designation__c</fullName>
    <label>designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Inter Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>